--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                 <ul>
                     <li>CompTIA A+</li>
                     <li>ITIL Foundation</li>
-                    <li>Microsoft Certified: Azure Fundamentals</li>
+                    <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url">Microsoft Security Immersion Completion Badge</a></li>
+                    <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
                     <!-- Add more certifications as needed -->
                 </ul>
             </div>
@@ -181,6 +182,10 @@
                     <ul>
                         <li>Led the testing and deployment of AWS AppStream and Microsoft Windows Virtual Desktop.</li>
                         <li>Improved remote work capabilities for over 3,000 users.</li>
+                        <li><a href="https://partyrock.aws/u/skate/gzxHNRez6/DailyTaskPlanner">A Daily Task Scheduler I created on AWS Bedrock</a></li>
+                        <li><a href="https://partyrock.aws/u/skate/OF7dAfvwV/Palabras-Laughter-Lounge%3A-A-Joke-Telling-and-Image-Sharing-Delight">Joke & Image Generator I created on AWS Bedrock</a></li>
+                        <li><a href="https://partyrock.aws/u/skate/waJAOkscM/Cloud-Concierge">Cloud Computing Tutor I created on AWS Bedrock</a></li>
+                        
                     </ul>
                 </div>
                 <div class="project">
