--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <div class="certifications">
                 <h2>Certifications</h2>
                 <ul>
-                    <li>CompTIA A+</li>
-                    <li>ITIL Foundation</li>
+                    <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
+                    <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url">Microsoft Security Immersion Completion Badge</a></li>
                     <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url">Microsoft Security Immersion Completion Badge</a></li>
                     <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
                     <!-- Add more certifications as needed -->
@@ -169,8 +169,8 @@
                 <h2>Education</h2>
                 <div class="education-item">
                     <p class="degree">Bachelor of Science in Information Technology</p>
-                    <p class="education-period">2012 - 2016</p>
-                    <p class="institution">University of California, Los Angeles</p>
+                    <p class="education-period">2024 - 2026</p>
+                    <p class="institution">Western Governors University Salt Lake City, Utah</p>
                 </div>
                 <!-- Add more education items if needed -->
             </section>
