--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
             <section id="education">
                 <h2>Education</h2>
                 <div class="education-item">
+                    <p class="degree">Associate of Arts in Computer Science Information Technology</p>
+                    <p class="education-period">2021 - 2023</p>
+                    <p class="institution">East Los Angeles College Monterey Park California</p>
+                    <p class="degree">Associate of Science in Applied Geographic Information Systems Data Specialization</p>
+                    <p class="education-period">2024 - 2025</p>
+                    <p class="institution">Rio Hondo College Whittier, California</p>
                     <p class="degree">Bachelor of Science in Information Technology</p>
                     <p class="education-period">2024 - 2026</p>
                     <p class="institution">Western Governors University Salt Lake City, Utah</p>
