--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
     <div class="container">
         <aside class="sidebar">
             <img src="your-profile-picture.jpg" alt="Your Name" class="profile-img">
-            <h1>Your Name</h1>
+            <h1>Fernando Diaz</h1>
             <p>Information Technology Professional</p>
             
             <div class="contact-info">
                 <h2>Contact</h2>
-                <p>Email: your.email@example.com</p>
+                <p>Email: palabra17@yahoo.com</p>
                 <p>Phone: (123) 456-7890</p>
                 <p>Location: Los Angeles, CA</p>
-                <p>LinkedIn: linkedin.com/in/yourprofile</p>
+                <p>LinkedIn:<a href="www.linkedin.com/in/iamfernandodiaz">linkedin</a></p>
             </div>
             
             <div class="skills">
@@ -120,8 +120,6 @@
                 <ul>
                     <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
                     <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url">Microsoft Security Immersion Completion Badge</a></li>
-                    <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url">Microsoft Security Immersion Completion Badge</a></li>
-                    <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
                     <!-- Add more certifications as needed -->
                 </ul>
             </div>
@@ -168,9 +166,9 @@
             <section id="education">
                 <h2>Education</h2>
                 <div class="education-item">
-                    <p class="degree">Associate of Arts in Computer Science Information Technology</p>
+                    <p class="degree"><a href="https://www.parchment.com/u/award/621ca25333e26907dbff35e0ff419e42">Associate of Arts in Computer Science Information Technology</p>
                     <p class="education-period">2021 - 2023</p>
-                    <p class="institution">East Los Angeles College Monterey Park California</p>
+                    <p class="institution">East Los Angeles College Monterey Park, California</p>
                     <p class="degree">Associate of Science in Applied Geographic Information Systems Data Specialization</p>
                     <p class="education-period">2024 - 2025</p>
                     <p class="institution">Rio Hondo College Whittier, California</p>
