--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             <section id="education">
                 <h2>Education</h2>
                 <div class="education-item">
-                    <p class="degree"><a href="https://www.parchment.com/u/award/621ca25333e26907dbff35e0ff419e42">Associate of Arts in Computer Science Information Technology</p>
+                    <p class="degree">>Associate of Arts in Computer Science Information Technology</p>
                     <p class="education-period">2021 - 2023</p>
-                    <p class="institution">East Los Angeles College Monterey Park, California</p>
+                    <p class="institution"><a href="https://www.parchment.com/u/award/621ca25333e26907dbff35e0ff419e42">East Los Angeles College</a> Monterey Park, California</p>
                     <p class="degree">Associate of Science in Applied Geographic Information Systems Data Specialization</p>
                     <p class="education-period">2024 - 2025</p>
                     <p class="institution">Rio Hondo College Whittier, California</p>
