--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h2>Contact</h2>
                 <p>Email: palabra17@yahoo.com</p>
                 <p>Phone: (123) 456-7890</p>
-                <p>Location: Los Angeles, CA</p>
+                <p>Location: East Los Angeles, CA</p>
                 <p>LinkedIn:<a href="www.linkedin.com/in/iamfernandodiaz">linkedin</a></p>
             </div>
             
@@ -166,7 +166,7 @@
             <section id="education">
                 <h2>Education</h2>
                 <div class="education-item">
-                    <p class="degree">>Associate of Arts in Computer Science Information Technology</p>
+                    <p class="degree">Associate of Arts in Computer Science Information Technology</p>
                     <p class="education-period">2021 - 2023</p>
                     <p class="institution"><a href="https://www.parchment.com/u/award/621ca25333e26907dbff35e0ff419e42">East Los Angeles College</a> Monterey Park, California</p>
                     <p class="degree">Associate of Science in Applied Geographic Information Systems Data Specialization</p>
