--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         .sidebar {
             width: 30%;
-            background-color: #FFFFFF;
+            background-color: #2c3e50;
             color: white;
             padding: 40px;
         }
