--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             margin-bottom: 15px;
         }
         .sidebar h2 {
-            color: #ecf0f1;
+            color: #FFFFFF;
             border-bottom: 2px solid #ecf0f1;
             padding-bottom: 10px;
         }
