--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
         .sidebar h2 {
             color: #FFFFFF;
-            border-bottom: 2px solid #ecf0f1;
+            border-bottom: 2px solid #FFFFFF;
             padding-bottom: 10px;
         }
         .contact-info, .skills, .certifications {
