--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             margin-bottom: 15px;
         }
         .sidebar h2 {
-            color: #FFFFFF;
-            border-bottom: 2px solid #FFFFFF;
+            color: #ecf0f1;
+            border-bottom: 2px solid #ecf0f1;
             padding-bottom: 10px;
         }
         .contact-info, .skills, .certifications {
