--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p>Email: palabra17@yahoo.com</p>
                 <p>Phone: (123) 456-7890</p>
                 <p>Location: East Los Angeles, CA</p>
-                <p>LinkedIn:<a href="www.linkedin.com/in/iamfernandodiaz">linkedin</a></p>
+                <p>LinkedIn:<a href="www.linkedin.com/in/iamfernandodiaz">linkedin color: white;</a></p>
             </div>
             
             <div class="skills">
