--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <div class="certifications">
                 <h2>Certifications</h2>
                 <ul>
-                    <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
-                    <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url">Microsoft Security Immersion Completion Badge</a></li>
+                    <li><a href="https://www.credly.com/badges/77ec588f-2b2a-42da-9cbd-3027725df39d/public_url"style="color:#ffffff;">Microsoft Certified Professional Certificate Azure Fundamentals AZ900</a></li>
+                    <li><a href="https://www.credly.com/badges/4040d706-3a9e-4650-acf0-89effbd123de/public_url"style="color:#ffffff;">Microsoft Security Immersion Completion Badge</a></li>
                     <!-- Add more certifications as needed -->
                 </ul>
             </div>
