--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                     <ul>
                         <li>Led the testing and deployment of AWS AppStream and Microsoft Windows Virtual Desktop.</li>
                         <li>Improved remote work capabilities for over 3,000 users.</li>
+                        <li><a href="https://havalinaskate.org/">Cofounded a skateboard charity for underpriviledged youth during covid called Havalina Skate Co.</a></li>
                         <li><a href="https://partyrock.aws/u/skate/gzxHNRez6/DailyTaskPlanner">A Daily Task Scheduler I created on AWS Bedrock</a></li>
                         <li><a href="https://partyrock.aws/u/skate/OF7dAfvwV/Palabras-Laughter-Lounge%3A-A-Joke-Telling-and-Image-Sharing-Delight">Joke & Image Generator I created on AWS Bedrock</a></li>
                         <li><a href="https://partyrock.aws/u/skate/waJAOkscM/Cloud-Concierge">Cloud Computing Tutor I created on AWS Bedrock</a></li>
